Remove return arg in CreateDoc